# web_app

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYING.md  README.md  health.txt
.github/workflows/: ci.yml  publish.yml
scripts/: publish_prepare_app.ps1  publish_prepare_app.sh
web_app/: Cargo.toml  pett_server.service
