[package]
name = "web_app"
version = "0.1.0"
description = "Web application with hello world, health, and metadata endpoints"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
warp = "0.3.5"

[dev-dependencies]
bytes = "1.4.0"
serde_json = "1.0.96"
tempfile = "3.5.0"

[build-dependencies]
git2 = "0.17.1"
